Minor change to make it compatible with Suns Make
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@523 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/bin/Makefile.in
+++ b/geotiff/libgeotiff/bin/Makefile.in
@@ -42,16 +42,16 @@ ALL=	makegeo$(EXEEXT) listgeo$(EXEEXT) geotifcp$(EXEEXT)
 all:	${ALL} 
   
 makegeo$(EXEEXT): makegeo.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} $< ${LIBS} -o $@
+	${CC} ${COPTS} makegeo.o ${LIBS} -o $@
   
 geotifcp$(EXEEXT): geotifcp.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} $< ${LIBS} -o $@
+	${CC} ${COPTS} geotifcp.o ${LIBS} -o $@
   
 listgeo$(EXEEXT): listgeo.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} $< ${LIBS} -o $@
+	${CC} ${COPTS} listgeo.o ${LIBS} -o $@
   
 csv2html$(EXEEXT): csv2html.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} $< ${LIBS} -o $@
+	${CC} ${COPTS} csv2html.o ${LIBS} -o $@
 
 .PHONY: prep
 prep:
