Added -L{libdir} like in main makefile, as per report from Tommy Andreassen (tommya at met.no).
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@532 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/bin/Makefile.in
+++ b/geotiff/libgeotiff/bin/Makefile.in
@@ -20,10 +20,14 @@ INSTALL	= @INSTALL@
 
 EXEEXT=@EXEEXT@
 
+prefix = /usr/local
+libdir  = ${exec_prefix}/lib
+
 PROGS=${BIN}/makegeo$(EXEEXT) ${BIN}/listgeo$(EXEEXT) ${BIN}/geotifcp$(EXEEXT)
 
 #
 IPATH	= -I. -I${GEOTIFFDIR} @TIFF_INC@ @ZIP_INC@
+
 #
 
 COPTS	= @CFLAGS@
@@ -42,16 +46,16 @@ ALL=	makegeo$(EXEEXT) listgeo$(EXEEXT) geotifcp$(EXEEXT)
 all:	${ALL} 
   
 makegeo$(EXEEXT): makegeo.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} makegeo.o ${LIBS} -o $@
+	${CC} ${COPTS} makegeo.o -L${libdir} ${LIBS} -o $@
   
 geotifcp$(EXEEXT): geotifcp.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} geotifcp.o ${LIBS} -o $@
+	${CC} ${COPTS} geotifcp.o -L${libdir} ${LIBS} -o $@
   
 listgeo$(EXEEXT): listgeo.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} listgeo.o ${LIBS} -o $@
+	${CC} ${COPTS} listgeo.o -L${libdir} ${LIBS} -o $@
   
 csv2html$(EXEEXT): csv2html.o  ${GEOTIFFDIR}/libgeotiff.a prep
-	${CC} ${COPTS} csv2html.o ${LIBS} -o $@
+	${CC} ${COPTS} csv2html.o -L${libdir} ${LIBS} -o $@
 
 .PHONY: prep
 prep:
