added /nologo and /W4
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@547 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/makefile.vc
+++ b/geotiff/libgeotiff/makefile.vc
@@ -6,7 +6,7 @@
 #
 # You may want to add optimization options to the CFLAGS macro as well. 
 #
-TIFF_DIR = ..\..\libtiff\libtiff
+TIFF_DIR = ..\libtiff\libtiff
 
 TIFF_INC = -I$(TIFF_DIR)
 TIFF_LIB = $(TIFF_DIR)\libtiff.lib
@@ -16,7 +16,7 @@ INCL	= -I. -Ilibxtiff $(TIFF_INC)
 LIBS    = $(TIFF_LIB)
 
 #
-CFLAGS  = $(INCL)
+CFLAGS  = $(INCL) /W4 /nologo
 #
 OBJS    = \
 	xtiff.obj \
