enabled geotiff.dll building
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@566 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/makefile.vc
+++ b/geotiff/libgeotiff/makefile.vc
@@ -10,6 +10,8 @@ TIFF_DIR = ..\libtiff\libtiff
 
 TIFF_INC = -I$(TIFF_DIR)
 TIFF_LIB = $(TIFF_DIR)\libtiff.lib
+TIFF_LIB_DLL = $(TIFF_DIR)\libtiff_i.lib
+
 #
 CC      = cl
 INCL	= -I. -Ilibxtiff $(TIFF_INC)
@@ -54,8 +56,8 @@ geotiff.lib:	$(OBJS)
 #	Only build geotiff.dll if you are also ensuring that TIFF symbols
 #	get exported.
 #
-#geotiff.dll:    $(OBJS)
-#	link /dll /out:geotiff.dll /implib:geotiff.lib $(OBJS) $(LIBS) 
+geotiff.dll:    $(OBJS)
+	link /dll /out:geotiff.dll /implib:geotiff_i.lib $(OBJS) $(TIFF_LIB_DLL)
 
 geo_config.h:	geo_config.h.vc
 	copy geo_config.h.vc geo_config.h
