--- a/geotiff/libgeotiff/configure.in
+++ b/geotiff/libgeotiff/configure.in
@@ -36,7 +36,7 @@ if test "$LD_SHARED" != "/bin/true" ; then
 	          GEOTIFF_DLL=cyggeotiff-1.dll
 	          GEOTIFF_IMP=libgeotiff.dll.a
                   LD_SHARED="gcc -shared -Wl,--export-all -Wl,--out-implib=\$(GEOTIFF_IMP)" ;;
-    *) GEOTIFF_SO=libgeotiff.so.$VERSION_MAJOR.$VERSION_MINOR.$VERSION_POINT ;;
+    *) GEOTIFF_SO=libgeotiff.${SO_EXT}.$VERSION_MAJOR.$VERSION_MINOR.$VERSION_POINT ;;
   esac
 fi
 AC_SUBST(GEOTIFF_SO,$GEOTIFF_SO)
