bug 909: ensure -fPIC included in CFLAGS
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@678 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -53,7 +53,7 @@ IPATH   = -I. -I${SRCDIR} @TIFF_INC@ @PROJ_INC@
 #
 CONF_LIBRARY=\
 	${NULL}
-COPTS	= @CFLAGS@ -DCSV_DATA_DIR=\"$(datadir)\"
+COPTS	= @CFLAGS@ @C_PIC@ -DCSV_DATA_DIR=\"$(datadir)\"
 CFLAGS  = ${COPTS} ${IPATH} ${CONF_LIBRARY}
 #
 SRCS    = \
