Use del instead of rm to delete files in clean target.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@682 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/makefile.vc
+++ b/geotiff/libgeotiff/makefile.vc
@@ -121,7 +121,10 @@ cpl_serv.obj: cpl_serv.c
 	$(CC) -c $(CFLAGS) cpl_serv.c
 
 clean:
-	rm -f *.obj *.exe *.lib *.dll
+	-del *.obj
+	-del *.exe
+	-del *.lib
+	-del *.dll
 
 install:	all
 	-mkdir $(PREFIX)
