Fixed prefix handling. http://bugzilla.remotesensing.org/show_bug.cgi?id=1245
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@720 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/bin/Makefile.in
+++ b/geotiff/libgeotiff/bin/Makefile.in
@@ -20,8 +20,8 @@ INSTALL	= @INSTALL@
 
 EXEEXT=@EXEEXT@
 
-prefix = /usr/local
-libdir  = ${prefix}/lib
+prefix = @prefix@
+libdir  = @libdir@
 
 PROGS=${BIN}/makegeo$(EXEEXT) ${BIN}/listgeo$(EXEEXT) ${BIN}/geotifcp$(EXEEXT)
 
