fix for parallel builds (bug 1475)
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@737 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/Makefile.in
+++ b/geotiff/libgeotiff/Makefile.in
@@ -104,7 +104,7 @@ $(GEOTIFF_SO): ${OBJS}
 	rm -f libgeotiff.$(SO_EXT)
 	${LN} $(GEOTIFF_SO) libgeotiff.$(SO_EXT)
 
-Progs:
+Progs:	$(GEOTIFF_SO)
 	${CD} ${BIN};\
 	${MAKE}
 
