Add libxtiff include files in devinstall.
git-svn-id: https://svn.osgeo.org/metacrs/geotiff/trunk@755 4e78687f-474d-0410-85f9-8d5e500ac6b2

--- a/geotiff/libgeotiff/makefile.vc
+++ b/geotiff/libgeotiff/makefile.vc
@@ -139,5 +139,6 @@ devinstall:	install
 	-mkdir $(LIBDIR)
 	copy *.lib $(LIBDIR)
 	copy *.h $(INCDIR)
+	copy libxtiff\*.h $(INCDIR)
 	copy *.inc $(INCDIR)
 	
