Make PROJ 6 a build requirement

--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -135,19 +135,15 @@ INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/libxtiff)
 # TIFF support - required, default=ON
 SET(WITH_TIFF TRUE CACHE BOOL "Choose if TIFF support should be built")
 
-# PROJ.4 support - optional, default=ON
-SET(WITH_PROJ4 TRUE CACHE BOOL "Choose if PROJ.4 support should be built")
+FIND_PACKAGE(PROJ NO_MODULE QUIET)
+if (NOT PROJ_FOUND)
+    FIND_PACKAGE(PROJ)
+endif ()
 
-IF(WITH_PROJ4)
-    FIND_PACKAGE(PROJ4 NO_MODULE QUIET)
-    if (NOT PROJ4_FOUND)
-      FIND_PACKAGE(PROJ4)
-    endif ()
-
-    IF(PROJ4_FOUND)
-        ADD_DEFINITIONS(-DHAVE_LIBPROJ=1)
-        INCLUDE_DIRECTORIES(${PROJ4_INCLUDE_DIR})
-    ENDIF()
+IF(PROJ_FOUND)
+    INCLUDE_DIRECTORIES(${PROJ_INCLUDE_DIR})
+ELSE()
+    MESSAGE(FATAL_ERROR "Failed to detect PROJ >= 6")
 ENDIF()
 
 # Zlib support - optional, default=OFF
@@ -455,7 +451,7 @@ SET_TARGET_PROPERTIES(${GEOTIFF_LIBRARY_TARGET} PROPERTIES
 
 TARGET_LINK_LIBRARIES(${GEOTIFF_LIBRARY_TARGET}
     ${TIFF_LIBRARIES}
-    ${PROJ4_LIBRARIES}
+    ${PROJ_LIBRARIES}
     ${ZLIB_LIBRARIES}
     ${JPEG_LIBRARIES})
 
