--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -51,7 +51,7 @@ build_script:
   - cd libgeotiff
   - mkdir build
   - cd build
-  - cmake -G "%VS_FULL%" .. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release  -DCMAKE_C_FLAGS="/WX" -DCMAKE_CXX_FLAGS="/WX"  -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install" -DPROJ4_INCLUDE_DIR="%BUILD_FOLDER%/install/local/include" -DPROJ4_LIBRARY="%BUILD_FOLDER%/install/local/lib/proj_6_0.lib" -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake
+  - cmake -G "%VS_FULL%" .. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release  -DCMAKE_C_FLAGS="/WX" -DCMAKE_CXX_FLAGS="/WX"  -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install" -DPROJ_INCLUDE_DIR="%BUILD_FOLDER%/install/local/include" -DPROJ_LIBRARY="%BUILD_FOLDER%/install/local/lib/proj_6_0.lib" -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake
   - cmake --build . --config Release --target install
 
 test_script:
