--- a/libgeotiff/Makefile.am
+++ b/libgeotiff/Makefile.am
@@ -5,14 +5,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 include $(top_srcdir)/m4/doxygen.am
 
-PROJ_CFLAGS=
-if PROJ_IS_CONFIG
-PROJ_CFLAGS += @PROJ_INC@ -DHAVE_LIBPROJ=1
-endif
-
-if PROJECTS_H_IS_CONFIG
-PROJ_CFLAGS += -DHAVE_PROJECTS_H=1
-endif
+PROJ_CFLAGS= @PROJ_INCLUDE@
 
 if TIFF_IS_CONFIG
 TIFF_CFLAGS = @TIFF_INC@ -DHAVE_TIFF=1
