Add test case with non-hardcoded PCS

--- a/libgeotiff/test/Makefile.am
+++ b/libgeotiff/test/Makefile.am
@@ -6,7 +6,8 @@ LISTGEOEXE = $(EXEPATH)/listgeo
 # Test scripts
 TESTLISTGEO = $(THIS_DIR)/testlistgeo
 
-EXTRA_DIST = testlistgeo testlistgeo_out.dist data/byte.tif
+EXTRA_DIST = testlistgeo testlistgeo_out.dist \
+             data/byte.tif data/pcs_32064.tif
 
 check-local:
 	$(TESTLISTGEO) $(LISTGEOEXE)
