--- a/libgeotiff/test/testlistgeo_out.dist
+++ b/libgeotiff/test/testlistgeo_out.dist
@@ -39,3 +39,46 @@ Upper Right   (  441920.000, 3751320.000)  (117d37'41.48"W, 33d54' 8.71"N)
 Lower Right   (  441920.000, 3750120.000)  (117d37'41.20"W, 33d53'29.75"N)
 Center        (  441320.000, 3750720.000)  (117d38' 4.70"W, 33d53'49.11"N)
 
+Testing listgeo ../test/data/pcs_32064.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.0
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         440720            3751320           0                
+      ModelPixelScaleTag (1,3):
+         60                60                0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeProjected
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GTCitationGeoKey (Ascii,23): "NAD27 / BLM 14N (ftUS)"
+      GeogCitationGeoKey (Ascii,6): "NAD27"
+      GeogAngularUnitsGeoKey (Short,1): Angular_Degree
+      ProjectedCSTypeGeoKey (Short,1): Unknown-32064
+      ProjLinearUnitsGeoKey (Short,1): Linear_Foot_US_Survey
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+PCS = 32064 (NAD27 / BLM 14N (ftUS))
+Projection = 15914 (BLM zone 14N (US survey feet))
+Projection Method: CT_TransverseMercator
+   ProjNatOriginLatGeoKey: 0.000000 (  0d 0' 0.00"N)
+   ProjNatOriginLongGeoKey: -99.000000 ( 99d 0' 0.00"W)
+   ProjScaleAtNatOriginGeoKey: 0.999600
+   ProjFalseEastingGeoKey: 500000.001016 m
+   ProjFalseNorthingGeoKey: 0.000000 m
+GCS: 4267/NAD27
+Datum: 6267/North American Datum 1927
+Ellipsoid: 7008/Clarke 1866 (6378206.40,6356583.80)
+Prime Meridian: 8901/Greenwich (0.000000/  0d 0' 0.00"E)
+Projection Linear Units: 9003/US survey foot (0.304801m)
+
+Corner Coordinates:
+Upper Left    (  440720.000, 3751320.000)  (102d20'17.15"W, 10d19'37.13"N)
+Lower Left    (  440720.000, 3751260.000)  (102d20'17.15"W, 10d19'36.54"N)
+Upper Right   (  440780.000, 3751320.000)  (102d20'16.55"W, 10d19'37.14"N)
+Lower Right   (  440780.000, 3751260.000)  (102d20'16.55"W, 10d19'36.54"N)
+Center        (  440750.000, 3751290.000)  (102d20'16.85"W, 10d19'36.84"N)
+
