--- a/libgeotiff/test/testlistgeo_out.dist
+++ b/libgeotiff/test/testlistgeo_out.dist
@@ -82,3 +82,148 @@ Upper Right   (  440780.000, 3751320.000)  (102d20'16.55"W, 10d19'37.14"N)
 Lower Right   (  440780.000, 3751260.000)  (102d20'16.55"W, 10d19'36.54"N)
 Center        (  440750.000, 3751290.000)  (102d20'16.85"W, 10d19'36.84"N)
 
+Testing listgeo ../test/data/GeogPrimeMeridianGeoKey.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.0
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         130               32                0                
+      ModelPixelScaleTag (1,3):
+         1                 1                 0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeGeographic
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GTCitationGeoKey (Ascii,16): "Just An Example"
+      GeographicTypeGeoKey (Short,1): User-Defined
+      GeogCitationGeoKey (Ascii,24): "Everest Ellipsoid Used."
+      GeogGeodeticDatumGeoKey (Short,1): User-Defined
+      GeogPrimeMeridianGeoKey (Short,1): PM_Paris
+      GeogLinearUnitsGeoKey (Short,1): Linear_Meter
+      GeogAngularUnitsGeoKey (Short,1): Angular_Degree
+      GeogEllipsoidGeoKey (Short,1): Ellipse_Everest_1830_1967_Definition
+      GeogSemiMajorAxisGeoKey (Double,1): 6377298.556      
+      GeogInvFlatteningGeoKey (Double,1): 300.8017         
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+Ellipsoid: 7016/Everest 1830 (1967 Definition) (6377298.56,6356097.55)
+Prime Meridian: 8903/Paris (2.337229/  2d20'14.03"E)
+Projection Linear Units: User-Defined (1.000000m)
+
+Corner Coordinates:
+Upper Left    (130d 0' 0.00"E, 32d 0' 0.00"N)
+Lower Left    (130d 0' 0.00"E, 31d 0' 0.00"N)
+Upper Right   (131d 0' 0.00"E, 32d 0' 0.00"N)
+Lower Right   (131d 0' 0.00"E, 31d 0' 0.00"N)
+Center        (130d30' 0.00"E, 31d30' 0.00"N)
+
+Testing listgeo ../test/data/GeogGeodeticDatumGeoKey.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.0
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         130               32                0                
+      ModelPixelScaleTag (1,3):
+         1                 1                 0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeGeographic
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GeographicTypeGeoKey (Short,1): User-Defined
+      GeogGeodeticDatumGeoKey (Short,1): Unknown-6742
+      GeogLinearUnitsGeoKey (Short,1): Linear_Meter
+      GeogAngularUnitsGeoKey (Short,1): Angular_Degree
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+Datum: 6742/Geodetic Datum of Malaysia 2000
+Ellipsoid: 7019/GRS 1980 (6378137.00,6356752.31)
+Projection Linear Units: User-Defined (1.000000m)
+
+Corner Coordinates:
+Upper Left    (130d 0' 0.00"E, 32d 0' 0.00"N)
+Lower Left    (130d 0' 0.00"E, 31d 0' 0.00"N)
+Upper Right   (131d 0' 0.00"E, 32d 0' 0.00"N)
+Lower Right   (131d 0' 0.00"E, 31d 0' 0.00"N)
+Center        (130d30' 0.00"E, 31d30' 0.00"N)
+
+Testing listgeo ../test/data/GeogAngularUnitsGeoKey_9114.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.0
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         130               32                0                
+      ModelPixelScaleTag (1,3):
+         1                 1                 0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeGeographic
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GeographicTypeGeoKey (Short,1): User-Defined
+      GeogGeodeticDatumGeoKey (Short,1): Unknown-6742
+      GeogLinearUnitsGeoKey (Short,1): Linear_Meter
+      GeogAngularUnitsGeoKey (Short,1): Unknown-9114
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+Datum: 6742/Geodetic Datum of Malaysia 2000
+Ellipsoid: 7019/GRS 1980 (6378137.00,6356752.31)
+Projection Linear Units: User-Defined (1.000000m)
+
+Corner Coordinates:
+Upper Left    (130d 0' 0.00"E, 32d 0' 0.00"N)
+Lower Left    (130d 0' 0.00"E, 31d 0' 0.00"N)
+Upper Right   (131d 0' 0.00"E, 32d 0' 0.00"N)
+Lower Right   (131d 0' 0.00"E, 31d 0' 0.00"N)
+Center        (130d30' 0.00"E, 31d30' 0.00"N)
+
+Testing listgeo ../test/data/ProjLinearUnitsGeoKey_9036.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.0
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         440720            3751320           0                
+      ModelPixelScaleTag (1,3):
+         60                60                0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeProjected
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GTCitationGeoKey (Ascii,23): "NAD27 / BLM 14N (ftUS)"
+      GeogCitationGeoKey (Ascii,6): "NAD27"
+      GeogAngularUnitsGeoKey (Short,1): Angular_Degree
+      ProjectedCSTypeGeoKey (Short,1): Unknown-32064
+      ProjLinearUnitsGeoKey (Short,1): Unknown-9036
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+PCS = 32064 (NAD27 / BLM 14N (ftUS))
+Projection = 15914 (BLM zone 14N (US survey feet))
+Projection Method: CT_TransverseMercator
+   ProjNatOriginLatGeoKey: 0.000000 (  0d 0' 0.00"N)
+   ProjNatOriginLongGeoKey: -99.000000 ( 99d 0' 0.00"W)
+   ProjScaleAtNatOriginGeoKey: 0.999600
+   ProjFalseEastingGeoKey: 500000.001016 m
+   ProjFalseNorthingGeoKey: 0.000000 m
+GCS: 4267/NAD27
+Datum: 6267/North American Datum 1927
+Ellipsoid: 7008/Clarke 1866 (6378206.40,6356583.80)
+Prime Meridian: 8901/Greenwich (0.000000/  0d 0' 0.00"E)
+Projection Linear Units: 9036/kilometre (1000.000000m)
+
+Corner Coordinates:
+Upper Left    (  440720.000, 3751320.000)  ( 99d 0' 0.00"W, 90d 0' 0.00"N)
+Lower Left    (  440720.000, 3751260.000)  ( 99d 0' 0.00"W, 90d 0' 0.00"N)
+Upper Right   (  440780.000, 3751320.000)  ( 99d 0' 0.00"W, 90d 0' 0.00"N)
+Lower Right   (  440780.000, 3751260.000)  ( 99d 0' 0.00"W, 90d 0' 0.00"N)
+Center        (  440750.000, 3751290.000)  ( 99d 0' 0.00"W, 90d 0' 0.00"N)
+
