--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -19,15 +19,17 @@ build_script:
   - if "%platform%" == "x64" SET VS_FULL=%VS_VERSION% Win64
   - if "%platform%" == "x86" SET VS_FULL=%VS_VERSION%
   - echo "%VS_FULL%"
+# Install libtiff
+  - vcpkg install tiff:"%platform%"-windows
 # Build libtiff
-  - git clone --depth=1 https://gitlab.com/libtiff/libtiff
-  - cd libtiff
-  - mkdir build_cmake
-  - cd build_cmake
-  - cmake -G "%VS_FULL%" .. -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install"
-  - cmake --build . --config Release --target install
-  - cd ..
-  - cd ..
+#  - git clone --depth=1 https://gitlab.com/libtiff/libtiff
+#  - cd libtiff
+#  - mkdir build_cmake
+#  - cd build_cmake
+#  - cmake -G "%VS_FULL%" .. -DCMAKE_BUILD_TYPE=Release -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install"
+#  - cmake --build . --config Release --target install
+#  - cd ..
+#  - cd ..
 # Install sqlite (PROJ dependency)
   - vcpkg install sqlite3:"%platform%"-windows
   - ps: |
@@ -49,7 +51,7 @@ build_script:
   - cd libgeotiff
   - mkdir build
   - cd build
-  - cmake -G "%VS_FULL%" .. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release  -DCMAKE_C_FLAGS="/WX" -DCMAKE_CXX_FLAGS="/WX"  -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install" -DPROJ4_INCLUDE_DIR="%BUILD_FOLDER%/install/local/include" -DPROJ4_LIBRARY="%BUILD_FOLDER%/install/local/lib/proj_6_0.lib"  -DTIFF_INCLUDE_DIR="%BUILD_FOLDER%/install/include" -DTIFF_LIBRARY="%BUILD_FOLDER%/install/lib/tiff.lib"
+  - cmake -G "%VS_FULL%" .. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release  -DCMAKE_C_FLAGS="/WX" -DCMAKE_CXX_FLAGS="/WX"  -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install" -DPROJ4_INCLUDE_DIR="%BUILD_FOLDER%/install/local/include" -DPROJ4_LIBRARY="%BUILD_FOLDER%/install/local/lib/proj_6_0.lib" -DCMAKE_TOOLCHAIN_FILE=c:/tools/vcpkg/scripts/buildsystems/vcpkg.cmake
   - cmake --build . --config Release --target install
 
 test_script:
